--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -10,8 +10,8 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav ml-auto">
                 <a class="nav-item nav-link" href="{{site.baseurl}}/blog">Blog</a>
-                <a class="nav-item nav-link" href="{{site.baseurl}}/papers">Papers</a>
                 <a class="nav-item nav-link" href="{{site.baseurl}}/events">Events</a>
+                <a class="nav-item nav-link" href="{{site.baseurl}}/downloads">Downloads</a>
                 <a class="nav-item nav-link" href="{{site.baseurl}}/about">About</a>
             </div>
         </div>
