--- a/_sass/site/page.scss
+++ b/_sass/site/page.scss
@@ -82,3 +82,38 @@ table,
 .content-container img {
     margin-bottom: .6rem;
 }
+
+.inner-content-container {
+    a {
+        font-family: sans-serif;
+        text-decoration: none;
+        color: #212529;
+        position: relative;
+        transition: all .3s cubic-bezier(.2, 0, 0, 1);
+        z-index: 1;
+
+        &:after {
+            content: '';
+            display: block;
+            height: 2px;
+            position: absolute;
+            bottom: 0;
+            right: 0;
+            left: 0;
+            background-color: var(--color-blue);
+            transition: all .3s cubic-bezier(.2, 0, 0, 1);
+            transform-origin: bottom center;
+            z-index: -1;
+        }
+
+        &:hover {
+            color: var(--color-blue);
+
+            &:after {
+                right: 50%;
+                left: 50%;
+                // height: 50%;
+            }
+        }
+    }
+}
