Improve how links look

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -40,14 +40,18 @@
     <link rel="preload" href="{{site.baseurl}}/assets/fonts/GT-Walsheim-Regular.woff" as="font" crossorigin="anonymous">
     <link rel="preload" href="{{site.baseurl}}/assets/fonts/TiemposTextWeb-Regular.woff2" as="font"
         crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap" rel="stylesheet">
 
     <!-- Google fonts -->
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:400,400i|IBM+Plex+Sans:100,100i,400,400i,700,700i"
         rel="stylesheet">
 
     <!-- Load fontawesome -->
-    <link rel="preload" href="/assets/external/fontawesome/webfonts/fa-solid-900.woff2" as="font" crossorigin="anonymous">
-    <link rel="preload" href="/assets/external/fontawesome/webfonts/fa-brands-400.woff2" as="font" crossorigin="anonymous">
+    <link rel="preload" href="/assets/external/fontawesome/webfonts/fa-solid-900.woff2" as="font"
+        crossorigin="anonymous">
+    <link rel="preload" href="/assets/external/fontawesome/webfonts/fa-brands-400.woff2" as="font"
+        crossorigin="anonymous">
     <link rel="prefetch" as="style" href="/assets/external/fontawesome/css/fontawesome.min.css" crossorigin="anonymous">
     <script>
         var fa = document.createElement("link");
