--- a/_sass/site/page.scss
+++ b/_sass/site/page.scss
@@ -84,35 +84,35 @@ table,
 }
 
 .inner-content-container {
-    a {
-        font-family: sans-serif;
-        text-decoration: none;
-        color: #212529;
-        position: relative;
-        transition: all .3s cubic-bezier(.2, 0, 0, 1);
-        z-index: 1;
-
-        &:after {
-            content: '';
-            display: block;
-            height: 2px;
-            position: absolute;
-            bottom: 0;
-            right: 0;
-            left: 0;
-            background-color: var(--color-blue);
+    p, h2, h3 {
+        a {
+            text-decoration: none;
+            position: relative;
             transition: all .3s cubic-bezier(.2, 0, 0, 1);
-            transform-origin: bottom center;
-            z-index: -1;
-        }
-
-        &:hover {
-            color: var(--color-blue);
+            z-index: 1;
 
             &:after {
+                content: '';
+                display: block;
+                height: 2px;
+                position: absolute;
+                bottom: 0;
                 right: 50%;
                 left: 50%;
-                // height: 50%;
+                background-color: var(--color-blue);
+                transition: all .3s cubic-bezier(.2, 0, 0, 1);
+                transform-origin: bottom center;
+                z-index: -1;
+            }
+
+            &:hover {
+                color: #212529;
+
+                &:after {
+                    right: 0;
+                    left: 0;
+                    // height: 50%;
+                }
             }
         }
     }
