Update dates to work better on mobile

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -50,7 +50,7 @@
                     <div class="retention">
 
                         <!-- Thank you text -->
-                        <h6>Thank you for reading this post. If you enjoyed the content, and want to let me know, or
+                        <p>Thank you for reading this post. If you enjoyed the content, and want to let me know, or
                             want
                             to
                             ask any questions, please contact me via one of the methods <a href="/about">listed
@@ -59,11 +59,11 @@
                                 rss
                                 feed</a> into your favorite feed reader, or <a
                                 href="https://twitter.com/ewpratten">follow
-                                me on Twitter</a> for notifications about my work and future posts.</h6>
+                                me on Twitter</a> for notifications about my work and future posts.</p>
 
                         <!-- Other posts to check out -->
-                        <h6>If you have the time to read some more, I recommend checking out one of the following posts:
-                        </h6>
+                        <p>If you have the time to read some more, I recommend checking out one of the following posts:
+                        </p>
                         <div class="card-group">
                             {% assign i = 0 %}
                             {% for post in site.posts %}
