--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -11,6 +11,7 @@
             <div class="navbar-nav ml-auto">
                 <a class="nav-item nav-link" href="{{site.baseurl}}/blog">Blog</a>
                 <a class="nav-item nav-link" href="{{site.baseurl}}/events">Events</a>
+                <a class="nav-item nav-link" href="{{site.baseurl}}/linklist">LinkList</a>
                 <a class="nav-item nav-link" href="{{site.baseurl}}/downloads">Downloads</a>
                 <a class="nav-item nav-link" href="{{site.baseurl}}/about">About</a>
             </div>
