--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -31,7 +31,7 @@
                     <h6>
                         <small class="text-muted" {% if page.written %} data-toggle="tooltip" data-placement="top"
                             title="Written {{page.written}}" {% endif %} style="color:gray;">{{page_date.first}}</small>
-                        {% for category in page.categories %}
+                        {% for category in page.tags %}
                         <a href="/categories?c={{category}}"><span class="badge"
                                 style="background-color: var(--light-gray);color:#333;">{{category}}</span></a>
                         {% endfor %}
