--- a/_sass/site/page.scss
+++ b/_sass/site/page.scss
@@ -126,3 +126,23 @@ table,
         display: none;
     }
 }
+
+blockquote {
+    // background: #f9f9f9;
+    border-left: 10px solid rgb(77, 77, 77);
+    margin: 1.5em 10px;
+    padding: 0.5em 10px;
+}
+
+blockquote:before {
+    color: #ccc;
+    font-size: 4em;
+    line-height: 0.1em;
+    margin-right: 0.25em;
+    vertical-align: -0.4em;
+}
+
+blockquote p {
+    display: inline;
+    font-style: italic;
+}
