--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,6 +15,9 @@
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
 
+<!-- code block tweaks -->
+<script src="/assets/js/highlight-rewrite.js"></script>
+
 {% if page.uses contains "masonry" %}
 <!-- Masonry for card grids -->
 <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
