multiple css improvements

--- a/_sass/site/codeblock.scss
+++ b/_sass/site/codeblock.scss
@@ -3,6 +3,7 @@ pre {
     font-size: 12px;
     border: 1px #e1e4e8 solid;
     background-color: #f6f8fa;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.19);
 }
 
 div.highlighter-rouge {
