--- a/_sass/site/page.scss
+++ b/_sass/site/page.scss
@@ -139,3 +139,33 @@ blockquote p {
     display: inline;
     font-style: italic;
 }
+
+.twitter-tweet {
+    border-radius: 15px;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.19);
+
+    iframe {
+        padding: 0;
+        max-width:100%;
+    }
+}
+
+.card-img-top{
+    max-width:100%;
+    padding:0;
+}
+
+.home-project:hover{
+    box-shadow: 1px 5px 5px rgba(0, 0, 0, 0.19);
+    transition: 0.15s;
+}
+
+.list-group-item-action{
+    transition: background 0.2s cubic-bezier(0, 0, 0.58, 1);
+}
+
+.list-group-item-action:hover{
+    // box-shadow: 0 4px 2px  rgba(0, 0, 0, 0.19);
+    transition: background 0s;
+    
+}
