--- a/_sass/site/page.scss
+++ b/_sass/site/page.scss
@@ -80,7 +80,8 @@ table,
 
     p,
     h2,
-    h3 {
+    h3,
+    li {
         a {
             text-decoration: none;
             position: relative;
