--- a/_includes/head.html
+++ b/_includes/head.html
@@ -48,7 +48,10 @@
         rel="stylesheet">
 
     <!-- Load fontawesome -->
-    <link rel="preload" href="/assets/external/fontawesome/webfonts/fa-solid-900.woff2" as="font"
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+        integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
+        crossorigin="anonymous" />
+    <!-- <link rel="preload" href="/assets/external/fontawesome/webfonts/fa-solid-900.woff2" as="font"
         crossorigin="anonymous">
     <link rel="preload" href="/assets/external/fontawesome/webfonts/fa-brands-400.woff2" as="font"
         crossorigin="anonymous">
@@ -62,7 +65,7 @@
     </script>
     <noscript>
         <link rel="stylesheet" href="/assets/external/fontawesome/css/fontawesome.min.css">
-    </noscript>
+    </noscript> -->
 
     <!-- Site style -->
     <link rel="stylesheet" href="/assets/css/site.css">
