pull masonry local

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,7 +20,7 @@
 
 {% if page.uses contains "masonry" %}
 <!-- Masonry for card grids -->
-<script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
+<script src="/assets/js/masonry.pkgd.min.js"></script>
 {% endif %}
 
 {% if page.uses contains "qrcodes" %}
