try to hotfix parse error

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -86,6 +86,9 @@
         },
     {% assign i = i | plus:1 %}
     {% endfor %}
+        {
+        "@type":"ListItem
+        }
     ]
 }
 </script>
