fix missing quote

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -87,7 +87,7 @@
     {% assign i = i | plus:1 %}
     {% endfor %}
         {
-        "@type":"ListItem
+        "@type":"ListItem"
         }
     ]
 }
