--- a/_sass/site/color-theme.scss
+++ b/_sass/site/color-theme.scss
@@ -2,6 +2,7 @@
     --color-red: #ff556e;
 
     --color-purple:#4844a3;
+    --color-faint-purple:#4844a350;
     --color-light-purple: #8a8ed8;
     --color-dark-purple:#342d71;
 
