software landing page

--- a/assets/css/site.scss
+++ b/assets/css/site.scss
@@ -11,3 +11,7 @@
 @import "site/page.scss";
 @import "site/kbd.scss";
 @import "site/codeblock.scss";
+
+@import "site/dev/landing.scss";
+@import "site/dev/software-landing.scss";
+@import "site/dev/nav.scss";
