--- a/_sass/site/dev/software-landing.scss
+++ b/_sass/site/dev/software-landing.scss
@@ -1,3 +1,7 @@
+#raw-content-wrapper {
+  overflow: hidden;
+}
+
 #software-hero {
   position: relative;
   background: rgb(18, 23, 19);
@@ -6,13 +10,13 @@
     rgba(18, 23, 19, 1) 0%,
     rgba(20, 20, 12, 1) 100%
   );
-  height: 80vh;
+  height: 100vh;
 
   img {
     position: absolute;
     top: 0;
     right: 0;
-    height: 80vh;
+    height: 100vh;
   }
 
   #content {
@@ -42,7 +46,7 @@
 
     #align-wrapper {
       position: absolute;
-      top: 35vh;
+      top: 40vh;
       margin-left: 10vw;
       @media (min-width: 843px) {
         margin-left: 5vw;
@@ -55,6 +59,7 @@
       h1 {
         width: max-content;
         color: white;
+        font-weight: bolder;
         margin: 0;
         text-transform: uppercase;
       }
@@ -63,8 +68,8 @@
 }
 
 #software-experience {
-  background-color: var(--color-dark-purple);
-  min-height: 100vh;
+  background-color: var(--color-dark-blue);
+  min-height: 80vh;
 
   .content {
     color: white;
@@ -72,6 +77,7 @@
 
     h1 {
       text-transform: uppercase;
+      font-weight: bolder;
     }
 
     .work-experience-list {
@@ -93,11 +99,79 @@
 
       &:hover {
         cursor: pointer;
-        border-color: var(--color-red);
-        color: var(--color-red);
+        border-color: var(--color-orange);
+        color: var(--color-orange);
         transition: color 0.1s cubic-bezier(0, 0, 0.58, 1),
           border 0.1s cubic-bezier(0, 0, 0.58, 1);
       }
     }
+  }
+}
+
+#software-skills-showcase {
+  background-color: var(--color-dark-blue);
+  min-height: 60vh;
+
+  .content {
+    color: white;
+    padding-top: 10vh;
+
+    h1 {
+      text-transform: uppercase;
+      font-weight: bolder;
+    }
+
+    .skill-heading {
+      @media (max-width: 993px) {
+        order: -1;
+      }
+    }
+
+    .skill-list {
+      @media (max-width: 993px) {
+        padding-top: 10px;
+        -ms-flex: none !important;
+        flex: none !important;
+        max-width: none !important;
+        width: 100%;
+      }
+    }
+
+    .skill-item {
+      background-color: unset;
+      border-color: white;
+      padding: 10px;
+
+      h4,
+      h5 {
+        text-align: right;
+      }
+
+      .skill-reveal {
+        hr {
+          background-color: white;
+        }
+        text-align: right;
+        overflow-y: hidden;
+        max-height: 0;
+        transition: max-height 1.4s cubic-bezier(0, 0, 0.58, 1);
+      }
+    }
+  }
+}
+
+#software-projects {
+  background-color: var(--color-dark-blue);
+  min-height: 80vh;
+  color: white;
+
+  h1 {
+    text-transform: uppercase;
+    font-weight: bolder;
+  }
+
+  .home-project {
+    background-color: unset;
+	border-color:white;
   }
 }
