Tweak codeblock css

--- a/_sass/site/codeblock.scss
+++ b/_sass/site/codeblock.scss
@@ -3,7 +3,11 @@ pre {
     font-size: 12px;
     border: 1px #e1e4e8 solid;
     background-color: #f6f8fa;
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.19);
+
+    &:hover{
+        box-shadow: 1px 5px 5px rgba(0, 0, 0, 0.19);
+        transition: 0.15s;
+    }
 }
 
 div.highlighter-rouge {
