--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <br><br>
 
-<div class="foot-info center">
+<div class="foot-info center print-hidden">
     Made with ♥ by Evan Pratten | <a href="/feed.xml">RSS</a> | <a href="https://status.retrylife.ca">API Status</a>
 </div>
 
