--- a/sass/styles/layout.scss
+++ b/sass/styles/layout.scss
@@ -5,9 +5,11 @@ h4,
 h5,
 h6 {
   font-family: "Urbanist", sans-serif;
+  font-weight: bolder;
 }
 p {
   font-family: "Roboto", sans-serif;
+  font-weight: normal;
 }
 
 .container {
