Adding blog post backlog

--- a/sass/styles/layout.scss
+++ b/sass/styles/layout.scss
@@ -11,6 +11,9 @@ p {
   font-family: "Roboto", sans-serif;
   font-weight: normal;
 }
+a {
+  text-decoration: none;
+}
 
 .container {
   max-width: 700px;
