--- a/templates/base.html
+++ b/templates/base.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     {% block head %}
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="alternate" type="application/rss+xml" title="RSS" href="{{get_url(path="rss.xml", trailing_slash=false)}}">
+    <link rel="alternate" type="application/rss+xml" title="RSS" href="{{get_url(path=" rss.xml",
+        trailing_slash=false)}}">
     <title>{% block title %}{% endblock title %} | {{config.extra.name}}</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Urbanist:wght@700&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Urbanist:wght@700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://maxst.icons8.com">
-    <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
+    <link rel="stylesheet"
+        href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
     <link rel="stylesheet" href="/styles/layout.css">
     {% endblock head %}
 </head>
+
 <body>
     <div class="container">
         <div class="profile-card">
@@ -24,10 +28,10 @@
         </div>
         <div class="navigation-bar">
             <hr>
-                <p>
-                    <a href="/">Home</a> | 
-                    <a href="/blog">Blog</a> 
-                </p>
+            <p>
+                <a href="/">Home</a> |
+                <a href="/blog">Blog</a>
+            </p>
             <hr>
         </div>
         <div class="page-content">
@@ -35,5 +39,16 @@
             {% endblock content %}
         </div>
     </div>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5912H4H03P"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-5912H4H03P');
+    </script>
 </body>
+
 </html>
