--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,9 @@
 </head>
 
 <body>
+    {# For IndieLogin #}
+    <link href="https://github.com/ewpratten" rel="me authn">
+    
     <div class="container">
         <div class="profile-card">
             {% block profile %}
