--- a/templates/base.html
+++ b/templates/base.html
@@ -6,8 +6,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="alternate" type="application/rss+xml" title="RSS" href="{{get_url(path=" rss.xml",
         trailing_slash=false)}}">
+    <link rel="webmention" href="https://webmention.io/va3zza.com/webmention" />
+    <link rel="pingback" href="https://webmention.io/va3zza.com/xmlrpc" />
+
     <title>{% block title %}{% endblock title %} | {{config.extra.name}}</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,7 +27,7 @@
 <body>
     {# For IndieLogin #}
     <link href="https://github.com/ewpratten" rel="me authn">
-    
+
     <div class="container">
         <div class="profile-card">
             {% block profile %}
