--- a/templates/base.html
+++ b/templates/base.html
@@ -36,12 +36,15 @@
                     <h1>{{config.extra.name}}</h1>
                     <p>
                         {{config.extra.profession}}
-                        <br><br><br>
+                        <br><br>
                         <a href="mailto:{{config.extra.email}}" rel="me"><i class="las la-envelope"></i>
                             {{config.extra.email}}</a><br>
                         <a href="https://github.com/{{config.extra.github}}" rel="me"><i class="lab la-github"></i>
                             {{config.extra.github}}</a><br>
-                        <a href="https://qrz.com/db/{{config.extra.qrz}}" rel="me"><i class="las la-broadcast-tower"></i>
+                        <a href="https://www.linkedin.com/in/{{config.extra.linkedin}}" rel="me"><i class="lab la-linkedin"></i>
+                            {{config.extra.linkedin}}</a><br>
+                        <a href="https://qrz.com/db/{{config.extra.qrz}}" rel="me"><i
+                                class="las la-broadcast-tower"></i>
                             {{config.extra.qrz}}</a>
                     </p>
                 </div>
