--- a/templates/section.html
+++ b/templates/section.html
@@ -9,8 +9,10 @@
 {% if section.extra.inject_blog_posts %}
 <ul>
     {% for page in section.pages %}
+    {% if not page.extra.hidden %}
     <li class="blog-post-li"><a href="{{page.path}}">{{page.title}}</a> <span style="color:gray;">({{page.date}})</span>
     </li>
+    {% endif %}
     {% endfor %}
 </ul>
 {% endif %}
