Robotics and hobbies pages

--- a/templates/base.html
+++ b/templates/base.html
@@ -56,7 +56,8 @@
             <hr>
             <p>
                 <a href="/">Home</a> |
-                <a href="/blog">Blog</a> 
+                <a href="/blog">Blog</a> |
+                <a href="/hobbies">Hobbies</a> 
             </p>
             <hr>
         </div>
