--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,10 @@
     <link rel="stylesheet"
         href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
     <link rel="stylesheet" href="/styles/layout.css">
+
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="va3zza.com" />
+    <meta name="twitter:image" content="https://avatars.githubusercontent.com/u/21065412" />
     {% endblock head %}
 </head>
 
@@ -57,7 +61,7 @@
             <p>
                 <a href="/">Home</a> |
                 <a href="/blog">Blog</a> |
-                <a href="/hobbies">Hobbies</a> 
+                <a href="/hobbies">Hobbies</a>
             </p>
             <hr>
         </div>
