much more meta stuff

--- a/templates/base.html
+++ b/templates/base.html
@@ -23,8 +23,10 @@
     <link rel="stylesheet" href="/styles/layout.css">
 
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:site" content="va3zza.com" />
-    <meta name="twitter:image" content="https://avatars.githubusercontent.com/u/21065412" />
+    <meta name="og:site" content="va3zza.com" />
+    <meta name="og:image" content="https://avatars.githubusercontent.com/u/21065412" />
+    <meta name="twitter:creator" content="@ewpratten">
+    <meta name="og:site_name" content="Evan Pratten (VA3ZZA)" />
     {% endblock head %}
 </head>
 
