--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 {{ super() }}
 <meta name="description" content="Evan Pratten is a college student, amateur radio operator, software developer, and more. This is his website." />
 <meta name="og:description" content="Evan Pratten is a college student, amateur radio operator, software developer, and more. This is his website." />
-<meta name="twitter:title" content="Evan Pratten (VA3ZZA)" />
+<meta name="og:title" content="Evan Pratten (VA3ZZA)" />
 {% endblock head %}
 
 {% block content %}
