--- a/templates/page.html
+++ b/templates/page.html
@@ -16,6 +16,13 @@
 MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']], displayMath: [ ['$$','$$'], ['\[','\]'] ]}});
 </script>
 {% endif %}
+
+<meta property="og:title" content="{{page.title}}" />
+<meta property="og:type" content="article" />
+{% if page.description %}
+<meta property="og:description" content="{{page.description}}" />
+{% endif %}
+<meta property="article:published_time" content="{{page.date}}T00:00:00+00:00" />
 {% endblock head %}
 
 {% block profile %}
