fix section bug

--- a/templates/section.html
+++ b/templates/section.html
@@ -5,7 +5,7 @@
 
 {% block head %}
 {{ super() }}
-<meta property="og:title" content="{{page.title}}" />
+<meta property="og:title" content="{{section.title}}" />
 {% endblock head %}
 
 {% block content %}
