nicer description handling

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,8 @@
 
 {% block head %}
 {{ super() }}
-<meta name="description" content="Evan Pratten is a college student, amateur radio operator, software developer, and more. This is his website." />
-<meta name="og:description" content="Evan Pratten is a college student, amateur radio operator, software developer, and more. This is his website." />
+<meta property="og:description" content="{{config.description}}" />
+<meta property="description" content="{{config.description}}" />
 <meta name="og:title" content="Evan Pratten (VA3ZZA)" />
 {% endblock head %}
 
