Stick my name on things

--- a/templates/page.html
+++ b/templates/page.html
@@ -17,7 +17,7 @@ MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']], displayMat
 </script>
 {% endif %}
 
-<meta property="og:title" content="{{page.title}}" />
+<meta property="og:title" content="{{page.title}} - Evan Pratten" />
 <meta property="og:type" content="article" />
 {% if page.description %}
 <meta property="og:description" content="{{page.description}}" />
