--- a/templates/section.html
+++ b/templates/section.html
@@ -5,7 +5,7 @@
 
 {% block head %}
 {{ super() }}
-<meta property="og:title" content="{{section.title}}" />
+<meta property="og:title" content="{{section.title}} - Evan Pratten" />
 {% if section.description %}
 <meta property="og:description" content="{{section.description}}" />
 <meta property="description" content="{{section.description}}" />
