--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    {% if current_url %}
+    <link rel="canonical" href="{{current_url}}" />
+    {% endif %}
 
     <link rel="alternate" type="application/rss+xml" title="RSS" href="{{get_url(path=" rss.xml",
         trailing_slash=false)}}">
