--- a/templates/page.html
+++ b/templates/page.html
@@ -32,7 +32,7 @@ MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']], displayMat
 {% block profile %}
 <div class="row">
     <div class="headshot-container">
-        <img src="https://avatars.githubusercontent.com/u/21065412" alt="Headshot" style="height:50px;width:auto;">
+        <img src="{{config.extra.profile_photo}}" alt="Headshot" style="height:50px;width:auto;">
     </div>
     <div class="text-container">
         <h1>{{config.extra.name}}</h1>
