--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="image/jpg" href="{{config.extra.profile_photo}}"/>
     {% if current_url %}
     <link rel="canonical" href="{{current_url}}" />
     {% endif %}
@@ -38,7 +39,7 @@
 
     <meta name="twitter:card" content="summary" />
     <meta name="og:site" content="va3zza.com" />
-    <meta name="og:image" content="https://avatars.githubusercontent.com/u/21065412" />
+    <meta name="og:image" content="{{config.extra.profile_photo}}" />
     <meta name="twitter:creator" content="@ewpratten">
     <meta name="og:site_name" content="Evan Pratten (VA3ZZA)" />
     {% endblock head %}
@@ -50,7 +51,7 @@
             {% block profile %}
             <div class="row">
                 <div class="headshot-container">
-                    <img src="https://avatars.githubusercontent.com/u/21065412" alt="Headshot">
+                    <img src="{{config.extra.profile_photo}}" alt="Headshot">
                 </div>
                 <div class="text-container">
                     <h1>{{config.extra.name}}</h1>
