--- a/templates/page.html
+++ b/templates/page.html
@@ -50,6 +50,15 @@ MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']], displayMat
     <div style="text-align: justify;">
         {{page.content | safe}}
     </div>
+
+    {# Comments only on blog posts #}
+    {% if page.description and page.date %}
+    <br><hr>
+    <script src="https://utteranc.es/client.js" repo="ewpratten/va3zza.com" issue-term="title" theme="github-light"
+        crossorigin="anonymous" async>
+        </script>
+    {% endif %}
+    
 </article>
 
 {% if page.extra.uses_twitter %}
