--- a/templates/page.html
+++ b/templates/page.html
@@ -27,6 +27,22 @@ MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']], displayMat
 <meta property="description" content="{{config.description}}" />
 {% endif %}
 <meta property="article:published_time" content="{{page.date}}T00:00:00+00:00" />
+
+{# Handle article listing #}
+<script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "NewsArticle",
+      "headline": "{{page.title}}",
+      "datePublished": "{{page.date}}T00:00:00+00:00",
+      "author": [{
+          "@type": "Person",
+          "name": "Evan Pratten",
+          "url": "https://va3zza.com"
+        }]
+    }
+</script>
+
 {% endblock head %}
 
 {% block profile %}
