--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,23 @@
 <meta property="og:description" content="{{config.description}}" />
 <meta property="description" content="{{config.description}}" />
 <meta name="og:title" content="Evan Pratten (VA3ZZA)" />
+
+<script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "url": "https://va3zza.com/",
+      "about": "{{config.description}}",
+      "potentialAction": [{
+        "@type": "SearchAction",
+        "target": {
+          "@type": "EntryPoint",
+          "urlTemplate": "https://va3zza.com/search?q={search_term_string}"
+        },
+        "query-input": "required name=search_term_string"
+      }]
+    }
+</script>
 {% endblock head %}
 
 {% block content %}
