--- a/templates/section.html
+++ b/templates/section.html
@@ -49,7 +49,20 @@
 {% block content %}
 {{section.content | safe}}
 
+{# Blog posts #}
 {% if section.extra.inject_blog_posts %}
+<ul>
+    {% for page in section.pages %}
+    {% if not page.extra.hidden %}
+    <li class="blog-post-li"><a href="{{page.path}}">{{page.title}}</a> <span style="color:gray;">({{page.date}})</span>
+    </li>
+    {% endif %}
+    {% endfor %}
+</ul>
+{% endif %}
+
+{# RFCs #}
+{% if section.extra.inject_rfcs %}
 <ul>
     {% for page in section.pages %}
     {% if not page.extra.hidden %}
