--- a/templates/index.html
+++ b/templates/index.html
@@ -25,6 +25,34 @@
       }]
     }
 </script>
+<script type='application/ld+json'>
+  {
+    "@context": "http://www.schema.org",
+    "@type": "person",
+    "name": "Evan Pratten",
+    "jobTitle": "Software Developer",
+    "gender": "male",
+    "url": "https://va3zza.com",
+    "image": "https://avatars.githubusercontent.com/u/21065412",
+    "address": {
+       "@type": "PostalAddress",
+       "addressLocality": "Oakville",
+       "addressRegion": "Ontario",
+       "postalCode": "L6H6W4",
+       "addressCountry": "Canada"
+    },
+    "email": "ewpratten@gmail.com",
+    "birthDate": "2003-06-01",
+    "sameAs": [
+      "https://github.com/ewpratten",
+      "https://www.linkedin.com/in/ewpratten",
+      "https://www.instagram.com/evanpratten",
+      "https://keybase.io/ewpratten",
+      "https://gitlab.com/ewpratten",
+      "https://twitter.com/ewpratten",
+    ]
+  }
+</script>
 {% endblock head %}
 
 {% block content %}
