--- a/sass/styles/layout.scss
+++ b/sass/styles/layout.scss
@@ -145,7 +145,16 @@ ul {
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   transition: all 0.1s ease 0s;
 
-  &:hover{
+  &:hover {
     box-shadow: rgba(0, 0, 0, 0.5) 0px 3px 15px;
   }
+}
+
+#instagram-embed-0 {
+  margin: auto !important;
+}
+
+.tiktok-embed {
+  border: none !important;
+  margin: auto !important;
 }
