--- a/templates/section.html
+++ b/templates/section.html
@@ -52,24 +52,25 @@
 {# Blog posts #}
 {% if section.extra.inject_blog_posts %}
 <ul>
-    {% for page in section.pages %}
-    {% if not page.extra.hidden %}
-    <li class="blog-post-li"><a href="{{page.path}}">{{page.title}}</a> <span style="color:{%if page.draft%}red{%else%}gray{%endif%};">({{page.date}})</span>
-    </li>
-    {% endif %}
-    {% endfor %}
+  {% for page in section.pages %}
+  {% if not page.extra.hidden %}
+  <li class="blog-post-li"><a href="{{page.path}}">{{page.title}}</a> <span
+      style="color:{%if page.draft%}red{%else%}gray{%endif%};">({{page.date}})</span>
+  </li>
+  {% endif %}
+  {% endfor %}
 </ul>
 {% endif %}
 
 {# RFCs #}
 {% if section.extra.inject_rfcs %}
 <ul>
-    {% for page in section.pages %}
-    {% if not page.extra.hidden %}
-    <li class="blog-post-li"><a href="{{page.path}}">{{page.title}}</a> <span style="color:gray;">({{page.date}})</span>
-    </li>
-    {% endif %}
-    {% endfor %}
+  {% for page in section.pages %}
+  {% if not page.extra.hidden %}
+  <li class="blog-post-li"><a href="{{page.path}}">{{page.title}}</a> <span style="color:gray;">({{page.date}})</span>
+  </li>
+  {% endif %}
+  {% endfor %}
 </ul>
 {% endif %}
 {% endblock content %}
