--- a/templates/base.html
+++ b/templates/base.html
@@ -78,8 +78,8 @@
             <p>
                 <a href="/">Home</a> |
                 <a href="/blog">Blog</a> |
-                <a href="/hobbies">Hobbies</a> |
-                <a href="/rfc">RFC</a>
+                <a href="/hobbies">Hobbies</a> 
+                {# <a href="/rfc">RFC</a> #}
             </p>
             <hr>
         </div>
