First revision of WHOIS

--- a/sass/styles/layout.scss
+++ b/sass/styles/layout.scss
@@ -158,3 +158,8 @@ ul {
   border: none !important;
   margin: auto !important;
 }
+
+.markdown-body table {
+  margin: auto !important;
+  width: fit-content !important;
+}
